--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -75,7 +75,9 @@
       "title": "Berechnungsgrundlage",
       "submit": "Berechnen",
       "save": "Parameter speichern",
+      "save-tooltip": "Die eingegebenen Parameter werden in diesem Browser gespeichert und können so einfach zu einem späteren Zeitpunkt wieder geladen werden. Sollten bereits Parameter gespeichert sein, so werden diese überschrieben.",
       "load": "Parameter laden",
+      "load-tooltip": "Die zuletzt in diesem Browser gespeicherten Parameter werden geladen. Wurden noch keine Parameter in diesem Browser gespeichert, kommt es zu einer Fehlermeldung.",
       "interval": "Investitionszeitraum (Jahre)",
       "until": "bis",
       "initialInvestment": "Bereits investiertes Kapital (€)",
