--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,7 +75,9 @@
       "title": "Basis of Calculation",
       "submit": "Calculate",
       "save": "Save Parameters",
+      "save-tooltip": "The parameters entered are saved in this browser and can therefore be easily reloaded at a later time. If parameters have already been saved, they will be overwritten.",
       "load": "Load Parameters",
+      "load-tooltip": "The parameters last saved in this browser are loaded. If no parameters have been saved in this browser, an error message is displayed.",
       "interval": "Investment period (years)",
       "until": "until",
       "initialInvestment": "Capital already invested (€)",
