--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -75,9 +75,13 @@
       "title": "Basis of Calculation",
       "submit": "Calculate",
       "save": "Save Parameters",
-      "save-tooltip": "The parameters entered are saved in this browser and can therefore be easily reloaded at a later time. If parameters have already been saved, they will be overwritten.",
+      "save-tooltip": "The parameters entered are saved in this browser and can therefore be easily reloaded at a later time (in the same browser). Various memory locations are available. If parameters have already been saved in a memory location, these will be overwritten.",
       "load": "Load Parameters",
-      "load-tooltip": "The parameters last saved in this browser are loaded. If no parameters have been saved in this browser, an error message is displayed.",
+      "load-tooltip": "The parameters last saved in this browser are reloaded. Four different memory locations are available from which parameters can be reloaded. Parameters are only available in the browser in which they were saved.",
+      "slot-1": "Standard",
+      "slot-2": "Best Case",
+      "slot-3": "Worst Case",
+      "slot-4": "Experimental",
       "interval": "Investment period (years)",
       "until": "until",
       "initialInvestment": "Capital already invested (€)",
@@ -111,7 +115,8 @@
     "release-1.0.0": "<p>The preview phase has been completed and release 1.0.0 is now online.</p><p>Most of the features of the “old” AktienTraum calculator have been implemented, although the calculation approach has already been changed to some extent. The purchase of shares is now simulated in the background. This leads to lower results compared to the previous dividend calculator, but these should be much more realistic.</p><p>I still have a lot of ideas buzzing around in my head, so further versions should not be long in coming.</p>",
     "release-1.0.1": "<p>FinTwit went straight into the test and noticed that the dividend is shown gross in the first year.</p><p>In principle, not much can be said about the current year, especially as this shows the sum of all previous years invested. This row in the results table is therefore is now highlighted in color and most of the values are not displayed.</p><p>This adjustment does not change the results of the calculation over time.</p>",
     "release-2.0.0": "<p>The dividend calculator now supports different language variants. This is already a big step and therefore also the bigger version jump.</p><p>We'll start with the English version and thanks to <i>DeepL</i> other language variants are now mainly a labor of love.</p>",
-    "release-2.1.0": "<p><b>Bugfix:</b> The price gains have so far been significantly underestimated. This had no effect on the calculation of of dividends, but on the total amount of assets.</p><p>The total payments are now also displayed in the graph for the payments. There is also a second graph for total assets. To be able to calculate these values more accurately, you can now specify how much of the initialy invested sum comes from dividends.</p>"
+    "release-2.1.0": "<p><b>Bugfix:</b> The price gains have so far been significantly underestimated. This had no effect on the calculation of of dividends, but on the total amount of assets.</p><p>The total payments are now also displayed in the graph for the payments. There is also a second graph for total assets. To be able to calculate these values more accurately, you can now specify how much of the initialy invested sum comes from dividends.</p>",
+    "release-2.2.0": "<p>Parameters entered can now be saved and reloaded under different memory locations. This eliminates the need to re-enter the values for the calculation each time you visit this computer. The values are saved in the browser (local storage). This means that if a different browser is used, the values saved in this browser are not available there.</p>"
   },
   "documentation": {
     "disclaimer": "<p>Compared to the “old” dividend calculator, which was still part of the AktienTraum blog (which no longer exists ;-)), there have been some fundamental changes in the calculation.</p><p>With the old calculator, the dividend yield was the leading factor. Over time, however, this became too large, as the dampening effect of price increases on the dividend yield was not taken into account.</p><p>To avoid this problem, the new dividend calculator simulates the purchase of shares in the background. The dividend is then calculated on these shares and this dividend - together with the share price - leads to the dividend yield.</p><p>Also, net values are now always used in the calculations, unless you enter zero for the interest rate. Only then is the capital available for share purchases from dividends realistic.</p><p>More details on the calculation are gradually being documented here and can of course also be found in the <a href=\"https://github.com/AktienTraum/dividendenrechner\" target=\"_blank\">source code</a>.</p>"
